fix:_changed z-index on navbar, #main-nav,  hamburger lines and checkbok in order to have them working and display on top of all other elements on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,9 @@ header {
     box-shadow: rgba(128, 128, 128, 0.24) 0px 1px 2px;
 }
 
+#main-nav {
+    z-index: 4;
+}
 
 .hamburger-lines {
     display: flex;
@@ -136,7 +139,7 @@ header {
     position: fixed;
     left: 10px;
     top: 10px;
-    z-index: 4;
+    z-index: 5;
 }
 
 .nav-container > .checkbox {
@@ -145,7 +148,7 @@ header {
     position: fixed;
     left: 9px;
     top: 2px;
-    z-index: 5;
+    z-index: 6;
     opacity: 0;
     cursor: pointer;
 }
